# dspy-examples

./: .gitignore  README.md  mini.py  pyproject.toml  simple_rag.py
html_summary/: prepare.py  summary.py  ui.py
