[tool.poetry]
name = "dspy-examples"
version = "0.1.0"
description = ""
authors = ["foxgem <jianhgreat@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy-ai = "^2.4.13"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
